app/globals.css
@import "tailwindcss";

@font-face {
  font-family: 'PP Neue Montreal';
  src: url('https://cdn.prod.website-files.com/6819ed8312518f61b84824df/6819ed8312518f61b84825ba_PPNeueMontreal-Medium.woff2') format('woff2');
  font-weight: 500;
  font-style: normal;
  font-display: swap;
}

body {
  background-color: #f4f4f4;
  font-family: 'PP Neue Montreal', Arial, sans-serif;
  color: #201d1d;
  font-weight: 400;
  margin: 0;
  padding: 0;
  overscroll-behavior: none;
  min-height: 100%;
  cursor: url("https://cdn.prod.website-files.com/6708f85ff3d3cba6aff436fb/671251b239d7aeb290a31ac5_cursor-default%402x.svg") 2 0, auto;
}

a, button {
  cursor: url("https://cdn.prod.website-files.com/6708f85ff3d3cba6aff436fb/671251b212e6b71494aa67ff_cursor-pointer%402x.svg") 12 0, pointer;
}

/* Disable Scroll on Loading */
main:has(.willem-header.is--loading) {
  height: 100dvh;
  overflow: hidden;
}

.willem-header {
  color: #ffffff;
  position: relative;
  overflow: hidden;
}

/* Loading: Hidden */
.willem-header.is--loading.is--hidden {
  display: none;
}

.willem-loader {
  color: #201d1d;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 100%;
  display: flex;
  position: absolute;
  top: 0;
  left: 0;
  overflow: hidden;
}

.willem__h1 {
  white-space: nowrap;
  justify-content: center;
  font-size: 12.5em;
  font-weight: 500;
  line-height: 1.25;
  display: flex;
  position: relative;
}

.willem__h1-start {
  justify-content: flex-end;
  width: max-content;
  display: flex;
  overflow: hidden;
}

.willem__h1-end {
  justify-content: flex-start;
  width: max-content;
  display: flex;
  overflow: hidden;
}

.willem__letter {
  display: block;
  position: relative;
  padding-top: 0.1em;
  padding-bottom: 0.1em;
}

.willem__letter-white.is--space {
  margin-left: .25em;
}

.willem-loader__box {
  flex-flow: column;
  justify-content: center;
  align-items: center;
  width: 0;
  display: flex;
  position: relative;
}

.willem-loader__box-inner {
  justify-content: center;
  align-items: center;
  min-width: 1em;
  height: 95%;
  display: flex;
  position: relative;
}

.willem__growing-image {
  justify-content: center;
  align-items: center;
  width: 0%;
  height: 100%;
  display: flex;
  position: absolute;
  overflow: hidden;
}

.willem__growing-image-wrap {
  width: 100%;
  min-width: 1em;
  height: 100%;
  position: absolute;
}

.willem__cover-image {
  pointer-events: none;
  object-fit: cover;
  -webkit-user-select: none;
  user-select: none;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
}

.willem__cover-image-extra {
  pointer-events: none;
  object-fit: cover;
  -webkit-user-select: none;
  user-select: none;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
}

.willem__cover-image-extra.is--1 { z-index: 3; }
.willem__cover-image-extra.is--2 { z-index: 2; }
.willem__cover-image-extra.is--3 { z-index: 1; }

.willem-header__content {
  flex-flow: column;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  min-height: 100dvh;
  padding: 3em;
  display: flex;
  position: relative;
}

.willem-header__top {
  width: 100%;
  position: relative;
}

.willem-header__bottom {
  justify-content: space-between;
  align-items: flex-end;
  width: 100%;
  display: flex;
  position: relative;
  overflow: hidden;
}

.willen-nav {
  display: flex;
  position: relative;
  overflow: hidden;
}

.willem-nav__start {
  justify-content: flex-start;
  align-items: flex-start;
  width: 50%;
  display: flex;
}

.willem-nav__end {
  justify-content: space-between;
  align-items: flex-start;
  width: 50%;
  display: flex;
}

.willem-nav__cta {
  display: flex;
}

.willem-nav__links {
  grid-column-gap: .5em;
  grid-row-gap: .5em;
  display: flex;
}

.willem-nav__link {
  color: inherit;
  font-size: 1.3125em;
  line-height: 1.3;
  text-decoration: none;
  position: relative;
}

.willem__letter-white {
  display: block;
  position: relative;
  padding-top: 0.1em;
  padding-bottom: 0.1em;
}

@media screen and (max-width: 991px) {
  .willem__h1 { font-size: 9em; }
  .willem-nav__links {
    grid-column-gap: 0em;
    grid-row-gap: 0em;
    flex-flow: column;
  }
}

@media screen and (max-width: 767px) {
  .willem__h1 { font-size: 5.5em; }
  .willem-nav__start { width: 65%; }
  .willem-nav__end {
    grid-column-gap: 1.5em;
    grid-row-gap: 1.5em;
    flex-flow: column;
    width: 45%;
  }
}

.osmo-credits__p {
  pointer-events: auto;
  text-align: center;
  margin: 0;
  font-family: 'PP Neue Montreal', Arial, sans-serif;
  font-size: 1.125em;
  font-weight: 500;
  line-height: 1.3;
  color: rgba(255, 255, 255, 0.6);
}

.osmo-credits__p-a { color: #f4f4f4; }

@media screen and (max-width: 991px) {
  .osmo-credits__p { display: none; }
}


@font-face {
  font-family: 'nokia-bold';
  src: url('/font/NokiaPureHeadline.woff2') format('woff2');
}

.font-amharic-bold {
  font-family: 'nokia-bold', sans-serif;
}

@font-face {
  font-family: 'nokia-light';
  src: url('/font/Nokia-light.woff2') format('woff2');
}

.font-amharic-light {
  font-family: 'nokia-light', sans-serif;
}

